syntax = "proto3";

package rpc;

option go_package = "alerting-platform/common/rpc";

service AlertService {
  rpc GetAlertData (AlertRequest) returns (AlertData);
}

message AlertRequest {
    string alert_id = 1;
}

message AlertData {
    string alert_name = 1;
}